# tiny-text-renderer

./: .gitmodules  CHANGELOG.md  CMakeLists.txt  README.md  library.json  main.cpp
src/: CMakeLists.txt  glyph.c  glyph.h  harfbuzz-config-override.h  harfbuzz_schrift.c  harfbuzz_schrift.h  scale.c  scale.h  schrift.c  schrift.h  tiny_text_renderer.c  tiny_text_renderer.h
